add nuget package and config startup, appsetting

--- a/Web-Triolingo/appsettings.json
+++ b/Web-Triolingo/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TriolingoConStr": "server=localhost;database=TriolingoDB;user=sa1;password=123456"
+  }
 }
