--- a/Web-Triolingo/Web-Triolingo.csproj
+++ b/Web-Triolingo/Web-Triolingo.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\css\Lessons\Lessons.css" />
+  </ItemGroup>
+
 </Project>
