add paging model

--- a/Web-Triolingo/Web-Triolingo.csproj
+++ b/Web-Triolingo/Web-Triolingo.csproj
@@ -28,6 +28,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="PagedList" Version="1.17.0" />
+    <PackageReference Include="pagedlist.core" Version="1.17.4" />
   </ItemGroup>
 
   <ItemGroup>
