implement code first to update database

--- a/Web-Triolingo/Web-Triolingo.csproj
+++ b/Web-Triolingo/Web-Triolingo.csproj
@@ -36,4 +36,8 @@
     <None Include="wwwroot\css\Lessons\Lessons.css" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Triolingo.Core\Triolingo.Core.csproj" />
+  </ItemGroup>
+
 </Project>
