--- a/Web-Triolingo/appsettings.json
+++ b/Web-Triolingo/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TriolingoConStr": "server=localhost;database=TriolingoDatabase;user=sa1;password=123456"
+    "TriolingoConStr": "server=KOUTAHARA;database=TriolingoDatabase;user=sa1;password=123456"
   }
 }
